fixing alignment and column reflow for lb embeds section

--- a/css/_sass/pages/_home.scss
+++ b/css/_sass/pages/_home.scss
@@ -11,10 +11,25 @@ body.home {
     }
   }
 
-  @media only screen and (min-width: ($largeScreen + px)) {
+  @media only screen and (min-width: (($largeScreen + 1) + px)) {
     .column-image-bottom {
       padding-top: 130px !important;
       padding-bottom: 0px;
+    }
+  }
+}
+
+.home-embeds {
+
+  .lb-unity-wrapper {
+    display: inline-block;
+  }
+
+  .embed-wrapper {
+
+    @media only screen and (min-width: (($largeScreen + 1) + px)) {
+      padding-left: 0;
+      padding-right: 0;
     }
   }
 }
